--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -16,6 +16,8 @@ fade-out-step = 0.08;
 no-fading-openclose = false;
 detect-client-opacity = true;
 
+
+
 rounded-corners-exclude = [
 "class_g = 'polybar'",
 "window_type = 'dock'"
@@ -33,3 +35,6 @@ rounded-corners-exclude = [
 /*];*/
 
 no-fading-destroyed-argb = true
+
+blur-background = true
+blur-size = 20
