--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -4,8 +4,8 @@
 
 # [[file:README.org::*Colors][Colors:1]]
 [colors]
-background = ${xrdb:color0}
-foreground = ${xrdb:color7}
+background = ${xrdb:background}
+foreground = ${xrdb:foreground}
 red = ${xrdb:color1}
 green = ${xrdb:color2}
 yellow = ${xrdb:color3}
@@ -29,7 +29,7 @@ gray = ${xrdb:color8}
   top = true
   offset-x = 0
   radius = 5.0
-  fixed-center = true 
+  fixed-center = false
 
   background = ${colors.background}
   foreground = ${colors.foreground}
@@ -38,8 +38,8 @@ gray = ${xrdb:color8}
   border-top-size = 10
   border-right-size = 10
 
-  padding-right = 21
-  padding-left = 5
+  padding-right = 1
+  padding-left = 2
 ;  padding-right = 8
 
   module-margin-left = 1
@@ -58,15 +58,15 @@ font-1 = WeatherIcons:size=12;2
 # Modules position
 
 # [[file:README.org::*Modules position][Modules position:1]]
-modules-left = date separator i3
-modules-center = xwindow
-modules-right = weather separator pulseaudio separator memory separator cpu temperature separator xkeyboard separator
+modules-left = date separator i3 separator
+modules-center = player
+modules-right = weather separator filesystem separator pulseaudio separator memory separator cpu separator wlan separator xkeyboard separator tray
 # Modules position:1 ends here
 
 # Tray setup
 
 # [[file:README.org::*Tray setup][Tray setup:1]]
-tray-position = right
+tray-position = none
 tray-detached = true
 tray-offset-x = -5
 tray-maxsize = 20
@@ -75,6 +75,25 @@ tray-maxsize = 20
 # Modules setup
 
 # [[file:README.org::*Modules setup][Modules setup:1]]
+[module/tray]
+type = internal/tray
+
+[module/pause]
+type = custom/script
+exec = "~/.config/eww/scripts/play_status.sh"
+exec-if = "playerctl status"
+interval = 0.1
+click-left = "playerctl play-pause"
+
+[module/player]
+type = custom/script
+exec = "echo $(playerctl metadata xesam:artist) - $(playerctl metadata xesam:title)"
+format =  <label>
+label-maxlen = 50 
+interval = 1
+exec-if = "playerctl status"
+# click-left = "eww open music"
+
 [module/system-bluetooth-bluetoothctl]
 type = custom/script
 exec = ~/Documents/scripts/bluetooth.sh
@@ -144,7 +163,7 @@ content-foreground = ${colors.orange}
 
 [module/xwindow]
 type = internal/xwindow
-label = %title:0:30:...%
+label = %title:0:20:...%
 
 [module/xkeyboard]
 type = internal/xkeyboard
@@ -291,10 +310,11 @@ label = %mb_used%
 
 [module/wlan]
 type = internal/network
-interface = wlan0
+interface = wlp2s0
+interface-type = wireless
 interval = 3.0
 
-format-connected = <ramp-signal> NET
+format-connected = "<ramp-signal> <label-connected> "
 format-connected-underline = #9f78e1
 label-connected = %essid%
 
