--- a/.config/obs-studio/basic/profiles/Без назви/basic.ini
+++ b/.config/obs-studio/basic/profiles/Без назви/basic.ini
@@ -2,10 +2,10 @@
 Name=Без назви
 
 [Video]
-BaseCX=1920
-BaseCY=1080
-OutputCX=1920
-OutputCY=1080
+BaseCX=2560
+BaseCY=1440
+OutputCX=2560
+OutputCY=1440
 FPSType=0
 FPSCommon=60
 
@@ -38,5 +38,5 @@ FFVEncoder=
 FFAEncoderId=0
 FFAEncoder=
 FFAudioMixes=1
-Encoder=ffmpeg_vaapi
-RecEncoder=ffmpeg_vaapi
+Encoder=ffmpeg_nvenc
+RecEncoder=ffmpeg_nvenc
